CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(leetcode-cpp)
ADD_EXECUTABLE(leetcode main.cpp)
ADD_EXECUTABLE(leetcode11 leetcode11.cpp)
ADD_EXECUTABLE(leetcode45 leetcode45.cpp)
ADD_EXECUTABLE(leetcode55 leetcode55.cpp)
ADD_EXECUTABLE(leetcode122 leetcode122.cpp)
ADD_EXECUTABLE(leetcode402 leetcode402.cpp)
ADD_EXECUTABLE(leetcode409 leetcode409.cpp)
ADD_EXECUTABLE(leetcode455 leetcode455.cpp)
ADD_EXECUTABLE(leetcode561 leetcode561.cpp)
ADD_EXECUTABLE(leetcode581 leetcode581.cpp)
ADD_EXECUTABLE(leetcode714 leetcode714.cpp)
ADD_EXECUTABLE(leetcode738 leetcode738.cpp)
ADD_EXECUTABLE(leetcode781 leetcode781.cpp)
ADD_EXECUTABLE(leetcode807 leetcode807.cpp)
ADD_EXECUTABLE(leetcode860 leetcode860.cpp)
ADD_EXECUTABLE(leetcode881 leetcode881.cpp)
ADD_EXECUTABLE(leetcode1011 leetcode1011.cpp)

add_executable(leetcode605 leetcode605.cpp)
add_executable(leetcode1221 leetcode1221.cpp)
add_executable(leetcode134 leetcode134.cpp)
add_executable(leetcode763 leetcode763.cpp)
add_executable(leetcode179 leetcode179.cpp)