cmake_minimum_required(VERSION 3.16)
project(leetcode-cpp)
add_executable(leetcode11 leetcode11.cpp)
add_executable(leetcode45 leetcode45.cpp)
add_executable(leetcode55 leetcode55.cpp)
add_executable(leetcode122 leetcode122.cpp)
add_executable(leetcode402 leetcode402.cpp)
add_executable(leetcode409 leetcode409.cpp)
add_executable(leetcode455 leetcode455.cpp)
add_executable(leetcode561 leetcode561.cpp)
add_executable(leetcode581 leetcode581.cpp)
add_executable(leetcode714 leetcode714.cpp)
add_executable(leetcode738 leetcode738.cpp)
add_executable(leetcode781 leetcode781.cpp)
add_executable(leetcode807 leetcode807.cpp)
add_executable(leetcode860 leetcode860.cpp)
add_executable(leetcode881 leetcode881.cpp)
add_executable(leetcode1011 leetcode1011.cpp)
add_executable(leetcode605 leetcode605.cpp)
add_executable(leetcode1221 leetcode1221.cpp)
add_executable(leetcode134 leetcode134.cpp)
add_executable(leetcode763 leetcode763.cpp)
add_executable(leetcode179 leetcode179.cpp)
add_executable(leetcode1005 leetcode1005.cpp)
add_executable(leetcode435 leetcode435.cpp)
add_executable(leetcode452 leetcode452.cpp)
add_executable(offer45 offer45.cpp)
add_executable(leetcode376 leetcode376.cpp)
add_executable(leetcode1013 leetcode1013.cpp)
add_executable(leetcode406 leetcode406.cpp)
add_executable(leetcode680 leetcode680.cpp)
add_executable(leetcode167 leetcode167.cpp)
add_executable(leetcode88 leetcode88.cpp)
add_executable(leetcode76 leetcode76.cpp)
add_executable(leetcode633 leetcode633.cpp)