cmake_minimum_required(VERSION 3.16)
project(leetcode-cpp)
add_executable(leetcode11 leetcode11.cpp)
add_executable(leetcode45 leetcode45.cpp)
add_executable(leetcode55 leetcode55.cpp)
add_executable(leetcode122 leetcode122.cpp)
add_executable(leetcode402 leetcode402.cpp)
add_executable(leetcode409 leetcode409.cpp)
add_executable(leetcode455 leetcode455.cpp)
add_executable(leetcode561 leetcode561.cpp)
add_executable(leetcode581 leetcode581.cpp)
add_executable(leetcode714 leetcode714.cpp)
add_executable(leetcode738 leetcode738.cpp)
add_executable(leetcode781 leetcode781.cpp)
add_executable(leetcode807 leetcode807.cpp)
add_executable(leetcode860 leetcode860.cpp)
add_executable(leetcode881 leetcode881.cpp)
add_executable(leetcode1011 leetcode1011.cpp)
add_executable(leetcode605 leetcode605.cpp)
add_executable(leetcode1221 leetcode1221.cpp)
add_executable(leetcode134 leetcode134.cpp)
add_executable(leetcode763 leetcode763.cpp)
add_executable(leetcode179 leetcode179.cpp)
add_executable(leetcode1005 leetcode1005.cpp)
add_executable(leetcode435 leetcode435.cpp)
add_executable(leetcode452 leetcode452.cpp)
add_executable(offer45 offer45.cpp)
add_executable(leetcode376 leetcode376.cpp)
add_executable(leetcode1013 leetcode1013.cpp)
add_executable(leetcode406 leetcode406.cpp)
add_executable(leetcode680 leetcode680.cpp)
add_executable(leetcode167 leetcode167.cpp)
add_executable(leetcode88 leetcode88.cpp)
add_executable(leetcode76 leetcode76.cpp)
add_executable(leetcode633 leetcode633.cpp)
add_executable(leetcode142 leetcode142.cpp)
add_executable(leetcode524 leetcode524.cpp)
add_executable(leetcode26 leetcode26.cpp)
add_executable(leetcode283 leetcode283.cpp)
add_executable(leetcode15 leetcode15.cpp)
add_executable(leetcode28 leetcode28.cpp)
add_executable(leetcode42 leetcode42.cpp)
add_executable(leetcode344 leetcode344.cpp)
add_executable(leetcode2055 leetcode2055.cpp)
add_executable(leetcode189 leetcode189.cpp)
add_executable(leetcode392 leetcode392.cpp)
add_executable(leetcode557 leetcode557.cpp)
add_executable(leetcode151 leetcode151.cpp)
add_executable(leetcode18 leetcode18.cpp)
add_executable(leetcode202 leetcode202.cpp)
add_executable(leetcode977 leetcode977.cpp tools/tools.cpp)
add_executable(leetcode31 leetcode31.cpp tools/tools.cpp)
add_executable(offer58_II offer58_II.cpp)
add_executable(main main.cpp)

add_executable(leetcode148 leetcode148.cpp)
add_executable(leetcode80 leetcode80.cpp)
add_executable(leetcode287 leetcode287.cpp)
add_executable(leetcode143 leetcode143.cpp)
add_executable(leetcode86 leetcode86.cpp)
add_executable(interview01_06 interview01_06.cpp)